* ext/sand_table/sand_hacks.c: sandbox_import_class_path, which attempts to recursively import classes from the main interpreter into a sandbox without.  classes are created from scratch to ensure no references to the main interp are brought along.  for now, only class and superclass creation is accounted for.  still need to do methods, ivars, virtual classes and so on.  * test/test_plain.rb: testing various import scenarios.

--- a/README
+++ b/README
@@ -50,7 +50,8 @@ _______________________________________________________________________________
      end
    }
 
-   book = s.eval("Book.new('Stanislaw Lem', 'The Star Diaries')")
+   book = s.eval("book = Book.new('Stanislaw Lem', 'The Star Diaries')")
+     #=> #<Book ...>
 
  The Book object you get back is the same which was created in the sandbox.
  And you can certainly access and redefine the sandboxed Book class as well.
@@ -65,3 +66,6 @@ _______________________________________________________________________________
    s.eval("book.year")
      #=> 1970
 
+ If you do a lot of back and forth with the sandboxes, it can be tough to keep
+ track of what classes are in the sandbox and what's in main.  Especially since
+ most sandboxes start to get a bit behind method-wise.
