to & for  _why and all the glory around beautiful code

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+******************************************************************************
+This is mirror of _why's sandbox, which served heart of tryruby like apps.
+
+******************************************************************************
+
 
  FREAKY FREAKY SANDBOX.
 _______________________________________________________________________________
